fix: update swiper pagination bullet dimensions for consistency on smaller screens

--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -84,8 +84,8 @@
 }
 @media screen and (max-width: 768px) {
   .swiper-pagination-bullet {
-    width: 0.8rem !important;
-    height: 0.8rem !important;
+    width: 1rem !important;
+    height: 1rem !important;
     padding: 0.25rem;
     margin: 0 var(--swiper-pagination-bullet-horizontal-gap, 10px) !important;
 ;
